--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -42,8 +34,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## R() and dR() unit test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,9 +52,9 @@
       "[[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
       " [0. 0. 1.]]\n",
-      "[[ 0.  1.  0.]\n",
-      " [-1.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n"
+      "[[ 0.  0.  0.]\n",
+      " [ 0.  0. -1.]\n",
+      " [ 0.  1.  0.]]\n"
      ]
     }
    ],
@@ -65,36 +64,95 @@
     "\n",
     "rot_mat = R(n_hat, theta)\n",
     "print(rot_mat)\n",
-    "\n",
     "d_rot_mat = dR(n_hat,theta)\n",
     "print(d_rot_mat)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inline pointcloud rendering using Vedo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0.]\n",
-      " [0. 1. 1.]\n",
-      " [0. 1. 1.]]\n",
-      "[[0. 0. 0.]\n",
-      " [0. 1. 1.]\n",
-      " [0. 1. 1.]]\n"
+      "(15015, 3)\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f173d7efeba241e4a0b66040a07f0313",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "test = np.zeros([3,3])\n",
-    "test[1:,1:] = 1\n",
+    "from vedo import *\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from ipyvtklink.viewer import ViewInteractiveWidget\n",
     "\n",
-    "print(test)\n",
-    "print(test.T)"
+    "#NOTE: \n",
+    "#\tPCAP is a network capture(?) format from Wireshark/ network capture tool\n",
+    "\t\t# https://binarymillennium.blogspot.com/2008/07/velodyne-lidar-sample-data-getting-pcap.html\n",
+    "\n",
+    "location = 'C:/Users/Derm/2021-03-10-16-43-50_Velodyne-VLP-16-Data_garminSignage.txt'\n",
+    "cloud = np.loadtxt(open(location, \"rb\"), delimiter=\",\")\n",
+    "#remove all rows with NaN elements\n",
+    "cloud = cloud[~np.isnan(cloud).any(axis=1)]\n",
+    "print(np.shape(cloud))\n",
+    "\n",
+    "plt1 = Plotter(N=1, axes=1, bg = (0.1,0.1,0.1), bg2 = (0.3,0.3,0.3),  interactive=True)\n",
+    "settings.embedWindow(backend='ipyvtk', verbose = True) #was this\n",
+    "# settings.useParallelProjection = True #makes view orthographic\n",
+    "\n",
+    "c = Points(cloud, c = (1,1,1), alpha = 0.5)\n",
+    "plt1.show(c, \"Volpe Data Test\", at =0)#.close()\n",
+    "# ViewInteractiveWidget(plt1.window)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inline volumetric rendering using ipyvolume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#simple demo\n",
+    "import ipyvolume\n",
+    "ds = ipyvolume.datasets.aquariusA2.fetch()\n",
+    "short = ds.data[:,:,:]\n",
+    "ipyvolume.quickvolshow(short, lighting=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
