--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -77,20 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(15015, 3)\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f173d7efeba241e4a0b66040a07f0313",
+       "model_id": "99e45b749a584f5e976bde19c3b0afb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,6 +99,7 @@
    ],
    "source": [
     "from vedo import *\n",
+    "from utils import *\n",
     "import numpy as np\n",
     "import os\n",
     "from ipyvtklink.viewer import ViewInteractiveWidget\n",
@@ -116,21 +112,23 @@
     "cloud = np.loadtxt(open(location, \"rb\"), delimiter=\",\")\n",
     "#remove all rows with NaN elements\n",
     "cloud = cloud[~np.isnan(cloud).any(axis=1)]\n",
-    "print(np.shape(cloud))\n",
-    "\n",
     "plt1 = Plotter(N=1, axes=1, bg = (0.1,0.1,0.1), bg2 = (0.3,0.3,0.3),  interactive=True)\n",
     "settings.embedWindow(backend='ipyvtk', verbose = True) #was this\n",
     "# settings.useParallelProjection = True #makes view orthographic\n",
+    "# plt1.show(c, \"Volpe Data Test\", at = 0)#.close() #WAS THIS\n",
     "\n",
-    "c = Points(cloud, c = (1,1,1), alpha = 0.5)\n",
-    "plt1.show(c, \"Volpe Data Test\", at =0)#.close()\n",
-    "# ViewInteractiveWidget(plt1.window)"
+    "f =np.array([5,5,2]) #fidelity in x, y, z\n",
+    "lim = np.array([-100,100,-100,100,-10,10])\n",
+    "\n",
+    "subdivide_scan(cloud,plt1, bounds = lim, fid = f) \n",
+    "ViewInteractiveWidget(plt1.window)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "## Inline volumetric rendering using ipyvolume"
    ]
   },
@@ -152,7 +150,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(np.linspace(1,10,3))"
+   ]
   },
   {
    "cell_type": "code",
