got Jacobian function working

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -45,31 +45,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## R() and dR() unit test"
+    "## Unit Test R() and Jacobian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.         0.         0.       ]\n",
-      " [ 0.         0.8660254 -0.5      ]\n",
-      " [ 0.         0.5        0.8660254]]\n",
-      "[[ 1.         0.         0.       ]\n",
-      " [-0.         0.8660254  0.5      ]\n",
-      " [ 0.        -0.5        0.8660254]]\n",
-      "[-0.52359878  0.         -0.        ]\n"
+      "[[ 1.          0.          0.        ]\n",
+      " [ 0.          0.99500417 -0.09983342]\n",
+      " [ 0.          0.09983342  0.99500417]]\n",
+      "[[ 1.          0.          0.        ]\n",
+      " [-0.          0.99500417  0.09983342]\n",
+      " [ 0.         -0.09983342  0.99500417]]\n",
+      "[-0.1  0.  -0. ]\n",
+      "[[ 1.          0.          0.          0.         -0.89517075  1.09483758]\n",
+      " [ 0.          1.          0.          0.89517075  0.         -1.        ]\n",
+      " [ 0.          0.          1.         -1.09483758  1.          0.        ]]\n"
      ]
     }
    ],
    "source": [
     "n_hat = np.array([1,0,0])\n",
-    "theta =  np.pi/6 #rad\n",
+    "theta =  0.1 #np.pi/6 #rad\n",
     "\n",
     "rot_mat_simp = R_simp(n_hat, theta)\n",
     "print(rot_mat_simp)\n",
@@ -78,6 +81,10 @@
     "print(rot_mat)\n",
     "\n",
     "print(R2Euler(rot_mat))\n",
+    "\n",
+    "p_point = np.array([1,1,1]).T\n",
+    "\n",
+    "J = jacobian(angs, p_point)\n",
     "\n",
     "d_rot_mat_simp = dR_simp(n_hat,theta)\n",
     "# print(d_rot_mat_simp)"
