--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -2,34 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(180000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 180 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import *\n",
     "import numpy as np\n",
@@ -50,26 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.          0.          0.        ]\n",
-      " [ 0.          0.99500417 -0.09983342]\n",
-      " [ 0.          0.09983342  0.99500417]]\n",
-      "[[ 1.          0.          0.        ]\n",
-      " [-0.          0.99500417  0.09983342]\n",
-      " [ 0.         -0.09983342  0.99500417]]\n",
-      "[-0.1  0.  -0. ]\n",
-      "[[ 1.          0.          0.          0.         -0.89517075  1.09483758]\n",
-      " [ 0.          1.          0.          0.89517075  0.         -1.        ]\n",
-      " [ 0.          0.          1.         -1.09483758  1.          0.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_hat = np.array([1,0,0])\n",
     "theta =  0.1 #np.pi/6 #rad\n",
@@ -99,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -107,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d700120aebc94bef9b2905a1048cc11e",
+       "model_id": "8fee57891a874b228bf94ae34fd7722a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,15 +78,17 @@
     }
    ],
    "source": [
-    "from vedo import *\n",
+    "## from vedo import *\n",
     "from utils import *\n",
     "import numpy as np\n",
     "import os\n",
     "from ipyvtklink.viewer import ViewInteractiveWidget\n",
     "\n",
-    "#NOTE: \n",
-    "#\tPCAP is a network capture(?) format from Wireshark/ network capture tool\n",
-    "\t\t# https://binarymillennium.blogspot.com/2008/07/velodyne-lidar-sample-data-getting-pcap.html\n",
+    "try:\n",
+    "    plt1.closeWindow()\n",
+    "    print(\"closed\")\n",
+    "except:\n",
+    "    pass\n",
     "\n",
     "location = 'C:/Users/Derm/2021-03-10-16-43-50_Velodyne-VLP-16-Data_garminSignage.txt'\n",
     "cloud = np.loadtxt(open(location, \"rb\"), delimiter=\",\")\n",
@@ -139,11 +99,19 @@
     "# settings.useParallelProjection = True #makes view orthographic\n",
     "# plt1.show(c, \"Volpe Data Test\", at = 0)#.close() #WAS THIS\n",
     "\n",
-    "f =np.array([10,10,2]) #fidelity in x, y, z\n",
+    "# for debug\n",
+    "# cloud = np.random.randn(10000,3)\n",
+    "# cloud[:,0] += -50*cloud[:,1] + np.random.randn()*5\n",
+    "# cloud[:,1] += 5\n",
+    "# cloud[:,1] = cloud[:,1] * 3 + 10*np.random.randn() + np.sin(cloud[:,1]*5)*10\n",
+    "# cloud[:,2] += 0.5*cloud[:,1] - 10\n",
+    "\n",
+    "f =np.array([100,100,2]) #fidelity in x, y, z\n",
+    "# f =np.array([1,1,1]) #fidelity in x, y, z\n",
     "lim = np.array([-100,100,-100,100,-10,10])\n",
     "# lim = np.array([-50,50,-50,50,-10,10])\n",
     "\n",
-    "subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = True) \n",
+    "E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False) \n",
     "ViewInteractiveWidget(plt1.window)"
    ]
   },
@@ -180,7 +148,18 @@
     "\n",
     "test = ans[ans < 10]\n",
     "print(test)\n",
-    "np.shape(test)[0]"
+    "np.shape(test)[0]\n",
+    "\n",
+    "print(np.median(test[:3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(E)"
    ]
   },
   {
