got jacobian function working with TensorFlow -> HUGE performance gains

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -1,19 +1,148 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Init TF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from utils import *\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import time\n",
+    "\n",
+    "#need to have these two lines to work on my ancient 1060 3gb\n",
+    "#  https://stackoverflow.com/questions/43990046/tensorflow-blas-gemm-launch-failed\n",
+    "physical_devices = tf.config.list_physical_devices('GPU') \n",
+    "tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
     "\n",
     "# for auto-reloading external modules\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%autosave 180\n",
     "# %matplotlib notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inline pointcloud rendering using Vedo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8604650b134c48e39db536410a38c2b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "## from vedo import *\n",
+    "from utils import *\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from ipyvtklink.viewer import ViewInteractiveWidget\n",
+    "import pykitti\n",
+    "\n",
+    "settings.embedWindow(backend='ipyvtk', verbose = True) #was this\n",
+    "\n",
+    "try:\n",
+    "    plt1.closeWindow()\n",
+    "    print(\"closed\")\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "plt1 = Plotter(N=1, axes=1, bg = (0.1,0.1,0.1), bg2 = (0.3,0.3,0.3),  interactive=True)\n",
+    "# settings.useParallelProjection = True #makes view orthographic\n",
+    "\n",
+    "## uncomment to use VOLPE dataset -----------------------------------------------------\n",
+    "# location = 'C:/Users/Derm/2021-03-10-16-43-50_Velodyne-VLP-16-Data_garminSignage.txt'\n",
+    "# cloud = np.loadtxt(open(location, \"rb\"), delimiter=\",\")\n",
+    "# cloud = cloud[~np.isnan(cloud).any(axis=1)] #remove all rows with NaN elements\n",
+    "## ------------------------------------------------------------------------------------\n",
+    "\n",
+    "## uncomment to use KITTI dataset -----------------------------------------------------\n",
+    "basedir = 'C:/kitti/'\n",
+    "date = '2011_09_26'\n",
+    "drive = '0005'\n",
+    "frame_range = range(150, 151, 1)\n",
+    "dataset = pykitti.raw(basedir, date, drive)\n",
+    "velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
+    "cloud = velo1[:,:3]\n",
+    "print(type(cloud))\n",
+    "## ------------------------------------------------------------------------------------\n",
+    "\n",
+    "# make 2D sinusioal motion (for debug) ------------------------------------------------\n",
+    "# cloud = np.random.randn(10000,3)\n",
+    "# cloud[:,0] += -50*cloud[:,1] + np.random.randn()*5\n",
+    "# cloud[:,1] += 5\n",
+    "# cloud[:,1] = cloud[:,1] * 3 + 10*np.random.randn() + np.sin(cloud[:,1]*5)*10\n",
+    "# cloud[:,2] += 0.5*cloud[:,1] - 10\n",
+    "##-------------------------------------------------------------------------------------\n",
+    "\n",
+    "# f =np.array([100,100,20]) #fidelity in x, y, z #takes ~30s on my dsektop\n",
+    "# lim = np.array([-50,50,-50,50,-10,10])\n",
+    "\n",
+    "f =np.array([5,5,1]) #fidelity in x, y, z # < 5s\n",
+    "lim = np.array([-100,100,-100,100,-10,10])\n",
+    "\n",
+    "E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
+    "ViewInteractiveWidget(plt1.window)"
    ]
   },
   {
@@ -46,73 +175,6 @@
     "\n",
     "d_rot_mat_simp = dR_simp(n_hat,theta)\n",
     "# print(d_rot_mat_simp)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Inline pointcloud rendering using Vedo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fee57891a874b228bf94ae34fd7722a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "## from vedo import *\n",
-    "from utils import *\n",
-    "import numpy as np\n",
-    "import os\n",
-    "from ipyvtklink.viewer import ViewInteractiveWidget\n",
-    "\n",
-    "try:\n",
-    "    plt1.closeWindow()\n",
-    "    print(\"closed\")\n",
-    "except:\n",
-    "    pass\n",
-    "\n",
-    "location = 'C:/Users/Derm/2021-03-10-16-43-50_Velodyne-VLP-16-Data_garminSignage.txt'\n",
-    "cloud = np.loadtxt(open(location, \"rb\"), delimiter=\",\")\n",
-    "#remove all rows with NaN elements\n",
-    "cloud = cloud[~np.isnan(cloud).any(axis=1)]\n",
-    "plt1 = Plotter(N=1, axes=1, bg = (0.1,0.1,0.1), bg2 = (0.3,0.3,0.3),  interactive=True)\n",
-    "settings.embedWindow(backend='ipyvtk', verbose = True) #was this\n",
-    "# settings.useParallelProjection = True #makes view orthographic\n",
-    "# plt1.show(c, \"Volpe Data Test\", at = 0)#.close() #WAS THIS\n",
-    "\n",
-    "# for debug\n",
-    "# cloud = np.random.randn(10000,3)\n",
-    "# cloud[:,0] += -50*cloud[:,1] + np.random.randn()*5\n",
-    "# cloud[:,1] += 5\n",
-    "# cloud[:,1] = cloud[:,1] * 3 + 10*np.random.randn() + np.sin(cloud[:,1]*5)*10\n",
-    "# cloud[:,2] += 0.5*cloud[:,1] - 10\n",
-    "\n",
-    "f =np.array([100,100,2]) #fidelity in x, y, z\n",
-    "# f =np.array([1,1,1]) #fidelity in x, y, z\n",
-    "lim = np.array([-100,100,-100,100,-10,10])\n",
-    "# lim = np.array([-50,50,-50,50,-10,10])\n",
-    "\n",
-    "E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False) \n",
-    "ViewInteractiveWidget(plt1.window)"
    ]
   },
   {
@@ -159,7 +221,169 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(E)"
+    "z = tf.constant([10.])\n",
+    "print(z)\n",
+    "print(tf.math.sin(test))\n",
+    "tf.math.sin(10.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a = tf.reshape([10.,10.,2.], (3,1))\n",
+    "# print(type(a))\n",
+    "# t = tf.Tensor(a, dtype = \"float32\")\n",
+    "\n",
+    "a = tf.constant([2.1,2.,3.])\n",
+    "b = tf.constant([1.,2.,3.])\n",
+    "tf.tensordot(a,b, axes = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eye = tf.eye(3)\n",
+    "# print(j)\n",
+    "Jx = tf.constant([[1.], [2.], [3.]])\n",
+    "J = tf.concat([eye, Jx], axis = 1)\n",
+    "print(J)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "took 4.7715325355529785 seconds on CPU\n",
+      "[[ 1.          0.          0.          0.35191004 -0.0379179   3.48705454]\n",
+      " [ 0.          1.          0.         -0.0976553   0.00380448 -1.35609674]\n",
+      " [ 0.          0.          1.         -3.58700749  1.00119734  0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "numiter = 1000\n",
+    "angs  = np.array([1.,0.1,0.1])\n",
+    "p_point = np.array([1.,2.,3.])\n",
+    "for _ in range(numiter):\n",
+    "    J = jacobian(angs, p_point);\n",
+    "print(\"took\", time.time()-start, \"seconds on CPU\")\n",
+    "print(J)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "took 0.12953495979309082 seconds on GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TF is slower if we do them one by one BUT is waaay faster if we send them in all at once\n",
+    "start = time.time()\n",
+    "# angs = tf.constant([[1., 1.],[0., 0.,],[0., 0.,]])\n",
+    "# p_point = tf.constant([[1., 1.],[2.,2.],[3.,3.]])\n",
+    "angs = tf.random.normal((3,numiter))\n",
+    "p_point = tf.random.normal((3,numiter))\n",
+    "J = jacobian_tf(angs, p_point);\n",
+    "print(\"took\", time.time()-start, \"seconds on GPU\")\n",
+    "# print(J.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(type(tf.constant(1.)))\n",
+    "# print(type(tf.sin(1.)))\n",
+    "# t = tf.sin(1.)\n",
+    "# t = tf.constant([[1.]])\n",
+    "# len(t)\n",
+    "\n",
+    "# test = tf.constant([[tf.constant(1.),tf.sin(3.)],\n",
+    "#                     [tf.constant(2.),tf.constant(3.)]])\n",
+    "\n",
+    "# print(tf.sin(angs[0]))\n",
+    "# print(tf.sin(3.))\n",
+    "\n",
+    "test = tf.Variable([[tf.constant(1.),tf.sin(angs[0])[0]],\n",
+    "                    [tf.constant(2.),tf.constant(3.)]])\n",
+    "\n",
+    "# print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.841471], shape=(1,), dtype=float32)\n",
+      "tf.Tensor(0.841471, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((tf.sin(angs[0])*tf.cos(angs[1])))\n",
+    "print((tf.sin(angs[0])*tf.cos(angs[1]))[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hmmmm\n",
+    "# test = tf.linalg.LinearOperatorScaledIdentity(num_rows = 10, multiplier = 1)\n",
+    "# test = test.to_dense()\n",
+    "\n",
+    "# test = tf.Variable(tf.zeros([10,3], tf.float32))\n",
+    "# test[1,0] = 1\n",
+    "\n",
+    "test = np.zeros([10,3])\n",
+    "test[:,0][test]\n",
+    "\n",
+    "print(test)"
    ]
   },
   {
