--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -41,12 +33,16 @@
     "from utils import *\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "# from tensorflow.python.framework.ops import disable_eager_execution\n",
     "import time\n",
     "\n",
     "#need to have these two lines to work on my ancient 1060 3gb\n",
     "#  https://stackoverflow.com/questions/43990046/tensorflow-blas-gemm-launch-failed\n",
     "physical_devices = tf.config.list_physical_devices('GPU') \n",
     "tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
+    "\n",
+    "#turn off eager execution\n",
+    "# disable_eager_execution() #no?\n",
     "\n",
     "# for auto-reloading external modules\n",
     "%load_ext autoreload\n",
@@ -59,12 +55,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inline pointcloud rendering using Vedo"
+    "## Inline pointcloud rendering with Vedo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "metadata": {
     "scrolled": false
    },
@@ -73,13 +69,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "closed\n",
       "<class 'numpy.ndarray'>\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8604650b134c48e39db536410a38c2b7",
+       "model_id": "d7750343e33340178f92336dba521b51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,10 +132,10 @@
     "# cloud[:,2] += 0.5*cloud[:,1] - 10\n",
     "##-------------------------------------------------------------------------------------\n",
     "\n",
-    "# f =np.array([100,100,20]) #fidelity in x, y, z #takes ~30s on my dsektop\n",
+    "# f =np.array([200,200,40]) #fidelity in x, y, z #takes ~30s on my dsektop\n",
     "# lim = np.array([-50,50,-50,50,-10,10])\n",
     "\n",
-    "f =np.array([5,5,1]) #fidelity in x, y, z # < 5s\n",
+    "f =np.array([50,50,1]) #fidelity in x, y, z # < 5s\n",
     "lim = np.array([-100,100,-100,100,-10,10])\n",
     "\n",
     "E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
@@ -154,9 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          0.          0.        ]\n",
+      " [ 0.          0.9950042  -0.09983342]\n",
+      " [ 0.          0.09983342  0.9950042 ]]\n",
+      "[[ 1.          0.          0.        ]\n",
+      " [-0.          0.99500417  0.09983342]\n",
+      " [ 0.         -0.09983342  0.99500417]]\n",
+      "[-0.1  0.  -0. ]\n"
+     ]
+    }
+   ],
    "source": [
     "n_hat = np.array([1,0,0])\n",
     "theta =  0.1 #np.pi/6 #rad\n",
@@ -200,9 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.          2.57142857  0.          5.71428571  7.28571429  8.85714286\n",
+      " 10.42857143 12.        ]\n",
+      "[1.         2.57142857 0.         5.71428571 7.28571429 8.85714286]\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "ans = np.linspace(1,12,8)\n",
     "ans[2] = 0\n",
@@ -217,15 +239,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = tf.constant([10.])\n",
-    "print(z)\n",
-    "print(tf.math.sin(test))\n",
-    "tf.math.sin(10.0)"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([10.], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([ 0.84147098  0.53977018  0.         -0.53870529  0.84283471  0.53763953], shape=(6,), dtype=float64)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=-0.54402107>"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -257,14 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took 4.7715325355529785 seconds on CPU\n",
+      "took 0.4831082820892334 seconds on CPU\n",
       "[[ 1.          0.          0.          0.35191004 -0.0379179   3.48705454]\n",
       " [ 0.          1.          0.         -0.0976553   0.00380448 -1.35609674]\n",
       " [ 0.          0.          1.         -3.58700749  1.00119734  0.        ]]\n"
@@ -272,8 +308,9 @@
     }
    ],
    "source": [
+    "# print(tf.sin(1.))\n",
     "start = time.time()\n",
-    "numiter = 1000\n",
+    "numiter = 100\n",
     "angs  = np.array([1.,0.1,0.1])\n",
     "p_point = np.array([1.,2.,3.])\n",
     "for _ in range(numiter):\n",
@@ -284,107 +321,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took 0.12953495979309082 seconds on GPU\n"
+      "took 0.011002779006958008 seconds on GPU\n",
+      "[[ 1.          0.          0.         -1.0232804  -0.2863361   0.9867529 ]\n",
+      " [ 0.          1.          0.          0.32353926 -0.42546123 -0.17956361]\n",
+      " [ 0.          0.          1.         -0.26423293  0.9188831   0.        ]\n",
+      " ...\n",
+      " [ 1.          0.          0.         -0.03568125  0.03095145  0.08746541]\n",
+      " [ 0.          1.          0.          0.39335006  0.04599016 -0.54896903]\n",
+      " [ 0.          0.          1.          0.26727706  0.37907043  0.        ]]\n"
      ]
     }
    ],
    "source": [
     "#TF is slower if we do them one by one BUT is waaay faster if we send them in all at once\n",
     "start = time.time()\n",
-    "# angs = tf.constant([[1., 1.],[0., 0.,],[0., 0.,]])\n",
-    "# p_point = tf.constant([[1., 1.],[2.,2.],[3.,3.]])\n",
+    "numiter = 100000\n",
     "angs = tf.random.normal((3,numiter))\n",
     "p_point = tf.random.normal((3,numiter))\n",
     "J = jacobian_tf(angs, p_point);\n",
     "print(\"took\", time.time()-start, \"seconds on GPU\")\n",
-    "# print(J.numpy())"
+    "print(J.numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unit test R2Euler_tf and R_tf\n",
+    "#### Works with single axis roation\n",
+    "#### Works with vectoried input\n",
+    "#### Solution becomes ambiguious with mutliple axis inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input angs: \n",
+      " [[ 0.       ]\n",
+      " [-0.       ]\n",
+      " [ 1.3544165]]\n",
+      "R2Euler_tf(R(angs)): \n",
+      " [[-0.       ]\n",
+      " [ 0.       ]\n",
+      " [-1.3544165]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "angs = tf.random.normal((3,1)) * tf.constant([[0.], [0.], [1.] ]) #single axis angle input\n",
+    "# angs = tf.Variable([[0.],[ np.pi/2],[ 0.]]) #vector input, multiple axis rotation\n",
+    "print(\"Input angs: \\n\", angs.numpy())\n",
+    "# print(\"R(angs): \\n\", R_tf(angs).numpy())\n",
+    "test1 = R2Euler_tf(R_tf(angs))\n",
+    "print(\"R2Euler_tf(R(angs)): \\n\", test1.numpy())\n",
+    "# test2 = R2Euler(R(angs[:,:2]))\n",
+    "# print(test2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# print(type(tf.constant(1.)))\n",
-    "# print(type(tf.sin(1.)))\n",
-    "# t = tf.sin(1.)\n",
-    "# t = tf.constant([[1.]])\n",
-    "# len(t)\n",
-    "\n",
-    "# test = tf.constant([[tf.constant(1.),tf.sin(3.)],\n",
-    "#                     [tf.constant(2.),tf.constant(3.)]])\n",
-    "\n",
-    "# print(tf.sin(angs[0]))\n",
-    "# print(tf.sin(3.))\n",
-    "\n",
-    "test = tf.Variable([[tf.constant(1.),tf.sin(angs[0])[0]],\n",
-    "                    [tf.constant(2.),tf.constant(3.)]])\n",
-    "\n",
-    "# print(test)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor([0.841471], shape=(1,), dtype=float32)\n",
-      "tf.Tensor(0.841471, shape=(), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print((tf.sin(angs[0])*tf.cos(angs[1])))\n",
-    "print((tf.sin(angs[0])*tf.cos(angs[1]))[0])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#hmmmm\n",
-    "# test = tf.linalg.LinearOperatorScaledIdentity(num_rows = 10, multiplier = 1)\n",
-    "# test = test.to_dense()\n",
-    "\n",
-    "# test = tf.Variable(tf.zeros([10,3], tf.float32))\n",
-    "# test[1,0] = 1\n",
-    "\n",
-    "test = np.zeros([10,3])\n",
-    "test[:,0][test]\n",
-    "\n",
-    "print(test)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
