more work moving algorithm to TensorFlow

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -9,37 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(180000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 180 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import *\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "import tensorflow_probability as tfp\n",
     "# from tensorflow.python.framework.ops import disable_eager_execution\n",
     "import time\n",
     "\n",
     "#need to have these two lines to work on my ancient 1060 3gb\n",
     "#  https://stackoverflow.com/questions/43990046/tensorflow-blas-gemm-launch-failed\n",
-    "physical_devices = tf.config.list_physical_devices('GPU') \n",
-    "tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
+    "# physical_devices = tf.config.list_physical_devices('GPU') \n",
+    "# tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
     "\n",
     "#turn off eager execution\n",
     "# disable_eager_execution() #no?\n",
@@ -52,42 +36,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.config.list_physical_devices('GPU')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inline pointcloud rendering with Vedo"
+    "## Using NumPy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "closed\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7750343e33340178f92336dba521b51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## from vedo import *\n",
     "from utils import *\n",
@@ -146,28 +116,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unit Test R() and Jacobian"
+    "## Using TensorFlow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.          0.          0.        ]\n",
-      " [ 0.          0.9950042  -0.09983342]\n",
-      " [ 0.          0.09983342  0.9950042 ]]\n",
-      "[[ 1.          0.          0.        ]\n",
-      " [-0.          0.99500417  0.09983342]\n",
-      " [ 0.         -0.09983342  0.99500417]]\n",
-      "[-0.1  0.  -0. ]\n"
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([23.665249 ,  0.9999643,  1.0103214], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([25.318369 ,  3.142531 ,  1.0738642], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([28.953072 , 16.444204 ,  1.3827578], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([-3.25275  , 10.039799 ,  1.1490233], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([-0.24406411,  7.712153  ,  1.126723  ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([24.649332 , 18.603691 ,  1.3275675], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([-2.440729 , 16.835114 ,  1.2582564], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([38.254974 , 13.248639 ,  1.5939476], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([24.578587 ,  1.8982158,  1.0434706], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([38.482914 , 13.047957 ,  1.5985242], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([-25.621971 ,  34.451263 ,   1.6619413], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([12.286621, 22.95003 ,  1.339885], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([ 0.43200505,  2.1462207 , -0.3975161 ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([2.9683437, 4.6797976, 0.8805953], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([0.57829845, 3.4555173 , 0.10449588], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([3.6572542, 7.2103496, 1.1372668], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([  3.465161 , -19.4506   ,   0.9642154], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([-1.3798162,  6.7559342,  1.237548 ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([30.651995 , 14.286218 ,  1.3828895], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([32.326523 ,  6.9766555,  1.333664 ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([28.111847 ,  4.8300767,  1.1777116], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([29.522411 , 15.75163  ,  1.3823982], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([2.6486342, 2.8543353, 1.1779186], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([1.2009054 , 2.6683564 , 0.00373123], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([1.3174357, 5.6113634, 1.0498257], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([ 0.7682971 ,  3.262844  , -0.20559603], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([1.3227395, 4.4730062, 0.9911176], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([ 1.0715849, 21.239634 ,  1.337852 ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([24.621096 ,  1.9399807,  1.0450385], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([24.81127  ,  2.7707298,  1.054946 ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([28.80869  , 16.90517  ,  1.3898687], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([ 0.15090291, 20.536556  ,  1.3296713 ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([-0.3194877,  7.367516 ,  1.1166912], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([6.274811 , 5.237807 , 1.1927568], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([ 0.12644765, 20.515194  ,  1.329382  ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([ 5.4775467, 23.37989  ,  1.3625683], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([20.110575 , 17.327953 ,  1.1968147], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([24.142624 ,  1.4574001,  1.02745  ], dtype=float32)>\n",
+      "<tf.Variable 'Variable:0' shape=(3,) dtype=float32, numpy=array([34.20257  , 13.02145  ,  1.4651716], dtype=float32)>\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "44be43803cf84e669a097fac87a1960a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
+   "source": [
+    "## from vedo import *\n",
+    "from utils import *\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from ipyvtklink.viewer import ViewInteractiveWidget\n",
+    "import pykitti\n",
+    "\n",
+    "settings.embedWindow(backend='ipyvtk', verbose = True) #was this\n",
+    "\n",
+    "plt2 = Plotter(N=1, axes=1, bg = (0.1,0.1,0.1), bg2 = (0.3,0.3,0.3),  interactive=True)\n",
+    "\n",
+    "basedir = 'C:/kitti/'\n",
+    "date = '2011_09_26'\n",
+    "drive = '0005'\n",
+    "frame_range = range(150, 151, 1)\n",
+    "dataset = pykitti.raw(basedir, date, drive)\n",
+    "velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
+    "cloud = velo1[:,:3]\n",
+    "# print(type(cloud))\n",
+    "\n",
+    "f = tf.constant([10,10,2]) #fidelity in x, y, z # < 5s\n",
+    "lim = tf.constant([-100.,100.,-100.,100.,-10.,10.])\n",
+    "\n",
+    "E = subdivide_scan_tf(cloud,plt2, bounds = lim, fid = f, draw_grid = False, show_pc = True) \n",
+    "ViewInteractiveWidget(plt2.window)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unit Test R() and Jacobian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "n_hat = np.array([1,0,0])\n",
     "theta =  0.1 #np.pi/6 #rad\n",
@@ -186,6 +244,91 @@
     "\n",
     "d_rot_mat_simp = dR_simp(n_hat,theta)\n",
     "# print(d_rot_mat_simp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unit test R2Euler_tf and R_tf\n",
+    "#### Works with single axis roation\n",
+    "#### Works with vectoried input\n",
+    "#### Solution becomes ambiguious with mutliple axis inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "angs = tf.random.normal((3,1)) * tf.constant([[0.], [0.], [1.] ]) #single axis angle input\n",
+    "# angs = tf.Variable([[0.],[ np.pi/2],[ 0.]]) #vector input, multiple axis rotation\n",
+    "print(\"Input angs: \\n\", angs.numpy())\n",
+    "# print(\"R(angs): \\n\", R_tf(angs).numpy())\n",
+    "test1 = R2Euler_tf(R_tf(angs))\n",
+    "print(\"R2Euler_tf(R(angs)): \\n\", test1.numpy())\n",
+    "# test2 = R2Euler(R(angs[:,:2]))\n",
+    "# print(test2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unit test tfp find bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = tf.convert_to_tensor(cloud, np.float32)#[:100]\n",
+    "# print(\"c: \\n\", c.numpy())\n",
+    "startx = -100.\n",
+    "stopx = 100.\n",
+    "numx = 10\n",
+    "edgesx = tf.linspace(startx, stopx, numx)\n",
+    "xbins = tfp.stats.find_bins(c[:,0], edgesx)\n",
+    "print(xbins)\n",
+    "starty = -100.\n",
+    "stopy = 100.\n",
+    "numy = 10\n",
+    "edgesy = tf.linspace(starty, stopy, numy)\n",
+    "ybins = tfp.stats.find_bins(c[:,1], edgesy)\n",
+    "print(ybins)\n",
+    "\n",
+    "min_num_pts = 1000\n",
+    "\n",
+    "count = 0\n",
+    "E = []\n",
+    "\n",
+    "for x in range(numx):\n",
+    "    for y in range(numy):\n",
+    "        #only do calculations if there are a sufficicently high number of points in the bin\n",
+    "        xin = tf.where(xbins == x)\n",
+    "        if tf.shape(xin)[0] > min_num_pts:\n",
+    "            if tf.shape(tf.where(tf.gather(ybins, xin) == y))[0] > min_num_pts: #repeat for y points at x coord\n",
+    "#                 print(\"working\", x, y)\n",
+    "                count += 1\n",
+    "# print(xin)\n",
+    "# print(ybins)\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = tf.linspace(1,5,5)\n",
+    "print(test)\n",
+    "ans = tf.where(test < 4)\n",
+    "print(\"ans: \\n\",ans)\n",
+    "print(\"\\n\", tf.gather(test, ans))"
    ]
   },
   {
@@ -211,20 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.          2.57142857  0.          5.71428571  7.28571429  8.85714286\n",
-      " 10.42857143 12.        ]\n",
-      "[1.         2.57142857 0.         5.71428571 7.28571429 8.85714286]\n",
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ans = np.linspace(1,12,8)\n",
     "ans[2] = 0\n",
@@ -239,28 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor([10.], shape=(1,), dtype=float32)\n",
-      "tf.Tensor([ 0.84147098  0.53977018  0.         -0.53870529  0.84283471  0.53763953], shape=(6,), dtype=float64)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(), dtype=float32, numpy=-0.54402107>"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -293,20 +406,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "took 0.4831082820892334 seconds on CPU\n",
-      "[[ 1.          0.          0.          0.35191004 -0.0379179   3.48705454]\n",
-      " [ 0.          1.          0.         -0.0976553   0.00380448 -1.35609674]\n",
-      " [ 0.          0.          1.         -3.58700749  1.00119734  0.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(tf.sin(1.))\n",
     "start = time.time()\n",
@@ -321,24 +423,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "took 0.011002779006958008 seconds on GPU\n",
-      "[[ 1.          0.          0.         -1.0232804  -0.2863361   0.9867529 ]\n",
-      " [ 0.          1.          0.          0.32353926 -0.42546123 -0.17956361]\n",
-      " [ 0.          0.          1.         -0.26423293  0.9188831   0.        ]\n",
-      " ...\n",
-      " [ 1.          0.          0.         -0.03568125  0.03095145  0.08746541]\n",
-      " [ 0.          1.          0.          0.39335006  0.04599016 -0.54896903]\n",
-      " [ 0.          0.          1.          0.26727706  0.37907043  0.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TF is slower if we do them one by one BUT is waaay faster if we send them in all at once\n",
     "start = time.time()\n",
@@ -348,47 +435,6 @@
     "J = jacobian_tf(angs, p_point);\n",
     "print(\"took\", time.time()-start, \"seconds on GPU\")\n",
     "print(J.numpy())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Unit test R2Euler_tf and R_tf\n",
-    "#### Works with single axis roation\n",
-    "#### Works with vectoried input\n",
-    "#### Solution becomes ambiguious with mutliple axis inputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input angs: \n",
-      " [[ 0.       ]\n",
-      " [-0.       ]\n",
-      " [ 1.3544165]]\n",
-      "R2Euler_tf(R(angs)): \n",
-      " [[-0.       ]\n",
-      " [ 0.       ]\n",
-      " [-1.3544165]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "angs = tf.random.normal((3,1)) * tf.constant([[0.], [0.], [1.] ]) #single axis angle input\n",
-    "# angs = tf.Variable([[0.],[ np.pi/2],[ 0.]]) #vector input, multiple axis rotation\n",
-    "print(\"Input angs: \\n\", angs.numpy())\n",
-    "# print(\"R(angs): \\n\", R_tf(angs).numpy())\n",
-    "test1 = R2Euler_tf(R_tf(angs))\n",
-    "print(\"R2Euler_tf(R(angs)): \\n\", test1.numpy())\n",
-    "# test2 = R2Euler(R(angs[:,:2]))\n",
-    "# print(test2)"
    ]
   },
   {
